# SudokuSolver

./: CMakeLists.txt  ReadMe.txt  Sudoku C++.cpp  Sudoku C++.h  Sudoku C++.rc  Sudoku C++.sln  Sudoku C++.vcproj  Sudoku C++.vcxproj  Sudoku C++.vcxproj.filters  Sudoku C++Dlg.cpp  Sudoku C++Dlg.h  UpgradeLog.htm  resource.h  stdafx.cpp  stdafx.h  sudoku.h  sudoku_.h
SudokuSolver/: CMakeLists.txt  SudokuSolver.cpp  SudokuSolver.h  main.cpp
res/: SudokuC.rc2
test/: lev1.txt  lev22.txt  sudoku hardest.txt  sudoku(cloznyy).txt  sudoku.txt  sudoku0.txt  sudoku2.txt  sudoku3.txt  sudoku4.txt  sudoku5.txt  sudoku6.txt  sudoku6tx.txt  sudoku7.txt  sudoku9.txt  sudokuмиs.txt  test.txt  wiki.txt
