# CMakeList.txt : CMake project for SudokuSolver, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (SudokuSolver "main.cpp" "SudokuSolver.cpp" "SudokuSolver.h")

# TODO: Add tests and install targets if needed.
